# centrifuge-chain-fork

./: Cargo.toml  crates.js  flake.nix  help.html  index.html  search-index.js  settings.html  source-files.js
.github/: CODEOWNERS
altair_runtime/: all.html  constant.AVERAGE_ON_INITIALIZE_RATIO.html  constant.CENTI_CFG.html  constant.CFG.html  constant.DAYS.html  constant.DEFAULT_FEE_VALUE.html  constant.GENERAL_CURRENCY_INDEX_PREFIX.html  constant.HOURS.html  constant.MAXIMUM_BLOCK_WEIGHT.html  constant.MAX_TOKEN_NAME_LENGTH_BYTES.html  constant.MAX_TOKEN_SYMBOL_LENGTH_BYTES.html  constant.MICRO_CFG.html  constant.MILLISECS_PER_BLOCK.html  constant.MILLISECS_PER_DAY.html  constant.MILLI_CFG.html  constant.MINUTES.html  constant.MIN_VESTING.html  constant.NORMAL_DISPATCH_RATIO.html  constant.SAFE_XCM_VERSION.html  constant.SECONDS_PER_DAY.html  constant.SECONDS_PER_HOUR.html  constant.SECONDS_PER_MINUTE.html  constant.SECONDS_PER_MONTH.html  constant.SECONDS_PER_WEEK.html  constant.SECONDS_PER_YEAR.html  constant.SLOT_DURATION.html  constant.TRANSACTION_RECOVERY_ID.html  constant.TREASURY_FEE_RATIO.html  constant.VERSION.html  constant.WASM_BINARY.html  constant.WASM_BINARY_BLOATY.html  enum.BalancesCall.html  enum.CurrencyId.html  enum.OriginCaller.html  enum.ProxyType.html  enum.RuntimeCall.html  enum.RuntimeEvent.html  enum.TimestampCall.html  fn.deposit.html  fn.native_version.html  (+293 more)
axelar_gateway_precompile/: all.html  constant.MAX_PAYLOAD_BYTES.html  constant.MAX_SOURCE_ADDRESS_BYTES.html  constant.MAX_SOURCE_CHAIN_BYTES.html  constant.MAX_TOKEN_SYMBOL_BYTES.html  constant.PREFIX_CONTRACT_CALL_APPROVED.html  enum.PalletCall.html  index.html  sidebar-items.js  struct.SourceConverter.html  type.Bytes.html  type.String.html
centrifuge_chain/: all.html  fn.main.html  index.html  sidebar-items.js
centrifuge_runtime/: all.html  constant.AVERAGE_ON_INITIALIZE_RATIO.html  constant.CENTI_CFG.html  constant.CFG.html  constant.DAYS.html  constant.DEFAULT_FEE_VALUE.html  constant.GENERAL_CURRENCY_INDEX_PREFIX.html  constant.HOURS.html  constant.MAXIMUM_BLOCK_WEIGHT.html  constant.MAX_TOKEN_NAME_LENGTH_BYTES.html  constant.MAX_TOKEN_SYMBOL_LENGTH_BYTES.html  constant.MICRO_CFG.html  constant.MILLISECS_PER_BLOCK.html  constant.MILLISECS_PER_DAY.html  constant.MILLI_CFG.html  constant.MINUTES.html  constant.MIN_VESTING.html  constant.NORMAL_DISPATCH_RATIO.html  constant.SAFE_XCM_VERSION.html  constant.SECONDS_PER_DAY.html  constant.SECONDS_PER_HOUR.html  constant.SECONDS_PER_MINUTE.html  constant.SECONDS_PER_MONTH.html  constant.SECONDS_PER_WEEK.html  constant.SECONDS_PER_YEAR.html  constant.SLOT_DURATION.html  constant.TRANSACTION_RECOVERY_ID.html  constant.TREASURY_FEE_RATIO.html  constant.VERSION.html  constant.WASM_BINARY.html  index.html  (+318 more)
pallets/connectors-gateway/axelar-gateway-precompile/: Cargo.toml
(+2560 files in other folders)
