[package]
name = "axelar-gateway-precompile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.43" }

ethabi = { version = "18.0.0", default-features = false }
fp-evm = { git = "https://github.com/moonbeam-foundation/frontier", default-features = false, branch = "moonbeam-polkadot-v0.9.43" }
pallet-evm = { git = "https://github.com/moonbeam-foundation/frontier", default-features = false, branch = "moonbeam-polkadot-v0.9.43" }
precompile-utils = { git = "https://github.com/moonbeam-foundation/moonbeam", default-features = false, rev = "93548eeba1e32361c401c58c87596b400707557a" }

cfg-types = { path = "../../../libs/types", default-features = false }
pallet-connectors-gateway = { path = "../../connectors-gateway", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-std/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "scale-info/std",
  "fp-evm/std",
  "precompile-utils/std",
  "pallet-evm/std",
  "pallet-connectors-gateway/std",
  "cfg-types/std",
  "ethabi/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "cfg-types/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "pallet-evm/runtime-benchmarks",
  "pallet-connectors-gateway/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-connectors-gateway/try-runtime",
  "cfg-types/try-runtime",
  "pallet-evm/try-runtime",
]
